Fixed & improved StandardStructPipe skipping