@@ -1,6 +1,7 @@
 package com.lapissea.dfs.io.instancepipe;
 
 import com.lapissea.dfs.core.DataProvider;
+import com.lapissea.dfs.io.RandomIO;
 import com.lapissea.dfs.io.content.BBView;
 import com.lapissea.dfs.io.content.ContentReader;
 import com.lapissea.dfs.io.content.ContentWriter;
@@ -72,11 +73,39 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 	
 	@Override
 	protected T doRead(VarPool<T> ioPool, DataProvider provider, ContentReader src, T instance, GenericContext genericContext) throws IOException{
+//		if(GlobalConfig.DEBUG_VALIDATION){
+//			skipCheck(ioPool, provider, instance, src, genericContext);
+//		}
+		
 		FieldSet<T> fields = getSpecificFields();
 		for(IOField<T, ?> field : fields){
 			readField(ioPool, provider, src, instance, genericContext, field);
 		}
 		return instance;
+	}
+	
+	private void skipCheck(VarPool<T> ioPool, DataProvider provider, T instance, ContentReader src, GenericContext genericContext) throws IOException{
+		if(!(src instanceof RandomIO rand) || instance instanceof IOInstance.Unmanaged) return;
+		
+		long skipped;
+		var  p = rand.getPos();
+		try{
+			skip(provider, src, genericContext);
+			skipped = rand.getPos() - p;
+		}finally{
+			rand.setPos(p);
+		}
+		
+		FieldSet<T> fields = getSpecificFields();
+		for(IOField<T, ?> field : fields){
+			readField(ioPool, provider, src, instance, genericContext, field);
+		}
+		var read = rand.getPos() - p;
+		rand.setPos(p);
+		
+		if(skipped != read){
+			throw new IllegalStateException("Skipped " + skipped + " bytes but read " + read);
+		}
 	}
 	
 	private static final int SKIP_FIXED = 0;
@@ -97,7 +126,7 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 		int siz();
 		void write(int off, byte[] dest);
 		
-		record Skip() implements CmdBuild{
+		record Skip(boolean needsIOPool) implements CmdBuild{
 			@Override
 			public int siz(){ return 1; }
 			@Override
@@ -106,17 +135,18 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 			}
 		}
 		
-		record SkipFixed(long bytes) implements CmdBuild{
+		record SkipFixed(long bytes, int extraFieldSkips) implements CmdBuild{
 			@Override
-			public int siz(){ return 9; }
+			public int siz(){ return 1 + 8 + 4; }
 			@Override
 			public void write(int off, byte[] dest){
 				dest[off] = SKIP_FIXED;
 				BBView.writeInt8(dest, off + 1, bytes);
+				BBView.writeInt4(dest, off + 1 + 8, extraFieldSkips);
 			}
 		}
 		
-		record Read(boolean needsInstance) implements CmdBuild{
+		record Read(boolean needsInstance, boolean needsIOPool) implements CmdBuild{
 			@Override
 			public int siz(){ return 1; }
 			@Override
@@ -134,25 +164,26 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 		List<CmdBuild> cmds   = new ArrayList<>(fields.size());
 		
 		for(IOField<T, ?> field : fields){
-			var needsInstance = !field.streamUnpackedFields().allMatch(f -> f.isVirtual(IO));
 			
+			//If any other field depends on this field, then it has to be read
 			if(field.streamUnpackedFields().flatMap(fields::streamDependentOn).findAny().isPresent()){
-				cmds.add(new CmdBuild.Read(needsInstance));
+				var needsInstance = !field.streamUnpackedFields().allMatch(f -> f.isVirtual(IO));
+				cmds.add(new CmdBuild.Read(needsInstance, field.needsIOPool()));
 				continue;
 			}
 			
-			var fixed = field.getSizeDescriptor().getFixed(WordSpace.BYTE);
-			if(fixed.isPresent()){
-				var siz = fixed.getAsLong();
-				if(!cmds.isEmpty() && cmds.get(cmds.size() - 1) instanceof CmdBuild.SkipFixed f){
-					cmds.set(cmds.size() - 1, new CmdBuild.SkipFixed(f.bytes + siz));
+			var fixedSizeO = field.getSizeDescriptor().getFixed(WordSpace.BYTE);
+			if(fixedSizeO.isPresent()){
+				var fixedSize = fixedSizeO.getAsLong();
+				if(!cmds.isEmpty() && cmds.getLast() instanceof CmdBuild.SkipFixed f){
+					cmds.set(cmds.size() - 1, new CmdBuild.SkipFixed(f.bytes + fixedSize, f.extraFieldSkips + 1));
 				}else{
-					cmds.add(new CmdBuild.SkipFixed(siz));
+					cmds.add(new CmdBuild.SkipFixed(fixedSize, 0));
 				}
 				continue;
 			}
 			
-			cmds.add(new CmdBuild.Skip());
+			cmds.add(new CmdBuild.Skip(field.needsIOPool()));
 		}
 		
 		var buff = new byte[cmds.stream().mapToInt(CmdBuild::siz).sum()];
@@ -162,18 +193,20 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 			pos += c.siz();
 		}
 		
+		assert pos == buff.length;
+		
 		boolean needsInstance = cmds.stream().anyMatch(c -> switch(c){
 			case CmdBuild.Skip ignored -> false;
 			case CmdBuild.SkipFixed ignored -> false;
 			case CmdBuild.Read read -> read.needsInstance;
 		});
-		boolean needsPool = cmds.stream().anyMatch(c -> switch(c){
-			case CmdBuild.Read ignored -> true;
-			case CmdBuild.Skip ignored -> true;
+		boolean needsIOPool = cmds.stream().anyMatch(c -> switch(c){
+			case CmdBuild.Skip skip -> skip.needsIOPool;
 			case CmdBuild.SkipFixed ignored -> false;
-		}) && makeIOPool() != null;
+			case CmdBuild.Read read -> read.needsIOPool;
+		});
 		
-		return new SkipData<>(fields, buff, needsInstance, needsPool);
+		return new SkipData<>(fields, buff, needsInstance, needsIOPool);
 	}
 	
 	@Override
@@ -190,7 +223,12 @@ public class StandardStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 		var cmds = skip.cmds;
 		for(int f = 0, c = 0; c<cmds.length; f++){
 			switch(cmds[c++]){
-				case SKIP_FIXED -> src.skipExact(BBView.readInt8(cmds, (c += 8) - 8));
+				case SKIP_FIXED -> {
+					src.skipExact(BBView.readInt8(cmds, c));
+					c += 8;
+					f += BBView.readInt4(cmds, c);
+					c += 4;
+				}
 				case READ -> skip.fields.get(f).read(pool, provider, src, inst, genericContext);
 				case SKIP -> skip.fields.get(f).skip(pool, provider, src, inst, genericContext);
 				default -> throw new IllegalStateException();
